Update styles and components for improved UI; add new gradients and button effects, modify layout background color, and enhance button accessibility.

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -17,15 +17,43 @@ a {
 }
 
 .btn-clip {
+  --corner-size: 5px;
+  --border-width: 1px;
+  --full-width: calc(var(--corner-size) + var(--border-width));
+  position: absolute;
+  inset: -2px;
+  background-color: white;
   clip-path: polygon(
-    12px 0px,
-    100% 0px,
-    100% 72%,
-    calc(100% - 12px) 100%,
+    0px var(--full-width),
+    var(--border-width) var(--full-width),
+    var(--border-width) var(--border-width),
+    var(--full-width) var(--border-width),
+    var(--full-width) 0px,
+    0px 0px,
     0px 100%,
-    0px 12px
+    100% 100%,
+    100% 0px,
+    calc(100% - var(--full-width)) 0px,
+    calc(100% - var(--full-width)) var(--border-width),
+    calc(100% - var(--border-width)) var(--border-width),
+    calc(100% - var(--border-width)) var(--full-width),
+    100% var(--full-width),
+    100% calc(100% - var(--full-width)),
+    calc(100% - var(--border-width)) calc(100% - var(--full-width)),
+    calc(100% - var(--border-width)) calc(100% - var(--border-width)),
+    calc(100% - var(--full-width)) calc(100% - var(--border-width)),
+    calc(100% - var(--full-width)) 100%,
+    var(--full-width) 100%,
+    var(--full-width) calc(100% - var(--border-width)),
+    var(--border-width) calc(100% - var(--border-width)),
+    var(--border-width) calc(100% - var(--full-width)),
+    0px calc(100% - var(--full-width)),
+    0px var(--full-width)
   );
-  border-radius: 2px;
+  transition:
+    inset 300ms ease-in-out,
+    clip-path 300ms ease-in-out,
+    color 300ms ease-in-out;
 }
 
 .container-query {
